// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioButton > should render 1`] = `
<div>
  <input
    class="w-4 h-4 transition duration-150 ease-in-out cursor-pointer focus:ring-offset-0 border-theme-secondary-300 text-theme-success-600"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a danger color 1`] = `
<div>
  <input
    class="w-4 h-4 transition duration-150 ease-in-out cursor-pointer focus:ring-offset-0 border-theme-secondary-300 text-theme-danger-400"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a hint color 1`] = `
<div>
  <input
    class="w-4 h-4 transition duration-150 ease-in-out cursor-pointer focus:ring-offset-0 border-theme-secondary-300 text-theme-hint-500"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a info color 1`] = `
<div>
  <input
    class="w-4 h-4 transition duration-150 ease-in-out cursor-pointer focus:ring-offset-0 border-theme-secondary-300 text-theme-primary-600"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a success color 1`] = `
<div>
  <input
    class="w-4 h-4 transition duration-150 ease-in-out cursor-pointer focus:ring-offset-0 border-theme-secondary-300 text-theme-success-600"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a warning color 1`] = `
<div>
  <input
    class="w-4 h-4 transition duration-150 ease-in-out cursor-pointer focus:ring-offset-0 border-theme-secondary-300 text-theme-warning-600"
    type="radio"
  />
</div>
`;
